deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crafcms-k8s
spec:
  selector:
    matchLabels:
      app: crafcms-k8s
  template:
    metadata:
      labels:
        app: crafcms-k8s
    spec:
      containers:
      - name: crafcms-k8s
        image: aalhalim/caftcms
        #imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
