service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafcms-k8s
spec:
  selector:
    app: crafcms-k8s
  ports:
  - port: 81
    targetPort: 80
    nodePort: 31200
  type: NodePort
