ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftcms-ingress
  labels:
    name: craftcms-ingress
spec:
  rules:
  - host: test-craftcms.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crafcms-k8s
            port: 
              number: 81
